--- a/partials/song-detail.html
+++ b/partials/song-detail.html
@@ -1,5 +1,6 @@
 <div>
-  <a href="#/songs/">{{correctSong.name}}</a> 
+worked
+  <a href="songs/">{{correctSong.name}}</a> 
   Performed by <b>{{correctSong.artist}}</b>
   on the album <b>{{correctSong.album}}</b>.
 </div>
